Multiple fixes and improvements

--- a/views/admin/index.jade
+++ b/views/admin/index.jade
@@ -61,6 +61,6 @@ block content
           .form-group
             label(for="collection") Collection
             select.form-control#dropcollection(name="collection")
-              each c in ['HWItem', 'Day', 'Grade', 'Feedback', 'Log', 'Reminder']
+              each c in ['HWItem', 'Day', 'Grade', 'Feedback', 'Log', 'Reminder', 'DailyThought']
                 option= c
           button.btn.btn-danger Delete
