--- a/views/work/project.jade
+++ b/views/work/project.jade
@@ -8,7 +8,7 @@ block content
         .page-heading
           .hidden-xs
             h1
-              b Priority #{project.priority} #{project.course.title} Project: 
+              b P#{project.priority} #{project.course.title} Project: 
               span= project.title
           .visible-xs.text-center
             h3 P#{project.priority} #{project.course.title} Project 
