--- a/views/users/login-modal.jade
+++ b/views/users/login-modal.jade
@@ -12,6 +12,8 @@
         .container-fluid
           .row
             .col-xs-12
+              
+              include /TC
               form#login-form(method="POST", data-redirect=redir)
                 span#login-errors
                 .form-group.col-xs-12.col-sm-6
