--- a/views/TC.jade
+++ b/views/TC.jade
@@ -31,4 +31,4 @@
 
   br
   button.btn.btn-default#back-login Back
-  button.btn.btn-danger.right#accept-terms Agree
+  button.btn.btn-danger.disabled.right#accept-terms Agree
