--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -4,7 +4,7 @@ block content
   .container
     include /info
     
-    .jumbotron
+    .jumbotron.homepage
       img.right.hidden-xs(title="Logo by the amazing John Chiaramonte.", style="width: 100%; max-width: 200px;", src="/images/logos/logo256x256.png")
       h1 Welcome To OnTrac
       
