--- a/views/contributions/index.jade
+++ b/views/contributions/index.jade
@@ -10,8 +10,9 @@ block content
           br
           p.
             #[b OnTrac] depends on the ideas and suggestions of the student's that use it. That includes you, #[b= currentUser.nickname].
+    hr
     .row
-      .col-xs-12.col-sm-6.col-md-3.contributor-score
+      .col-xs-12.col-sm-6.col-md-4.contributor-score
         .panel.panel-default
           .panel-body
             .col-xs-12.col-sm-3
@@ -19,24 +20,19 @@ block content
             .col-xs-12.col-sm-9
               p(style="font-size: 1.4em") Your Current Contributor Score
               span.text-muted Nice!
-      .col-xs-12.col-sm-6.col-md-9
-        .panel.panel-primary
-          .panel-heading
-            h3.panel-title Latest Suggestion
-          .panel-body
-            p Coming soon...
-    hr
-    .row
       .col-xs-12.col-sm-6.col-md-4
-        .panel.panel-default
-          .panel-heading
-            h3.panel-title Accepted Suggestions
+        .panel.panel-info
           .panel-body
-            p Coming soon...
+            .col-xs-12.col-sm-3
+              span(style="font-size: 4.7em") 0
+            .col-xs-12.col-sm-9
+              p(style="font-size: 1.3em") Accepted Submitted Contributions
+              span.text-muted Nice!
       .col-xs-12.col-sm-6.col-md-4
         .panel.panel-danger
-          .panel-heading
-            h3.panel-title Rejected Suggestions
           .panel-body
-            p Coming soon...
-            
+            .col-xs-12.col-sm-3
+              span(style="font-size: 4.4em") 0
+            .col-xs-12.col-sm-9
+              p(style="font-size: 1.2em") Pending Submitted Feedback
+              span.text-muted Nice!
