--- a/views/grades/index.jade
+++ b/views/grades/index.jade
@@ -12,7 +12,7 @@ block content
     
     .row
       .col-xs-12
-        h2 Leaving this empty till in is usable!
+        h2 Coming soon...
     //
       .row
         .col-xs-12
