--- a/views/users/list.jade
+++ b/views/users/list.jade
@@ -33,8 +33,10 @@ block content
       .col-xs-12
         .page-header
           h1 Leaderboards
-        button.btn.btn-default#lb-points Points
-        button.btn.btn-default#lb-logins Login Count
-        button.btn.btn-default#lb-rank Rank
+        #leaderboard-sorting
+          button.btn.btn-default(data-compare="points") Points
+          button.btn.btn-default(data-compare="login_count") Login Count
+          button.btn.btn-default(data-compare="rank") Rank
+          button.btn.btn-default(data-compare="contributor_score") Contributor Score
         #leaderboard
           p.text-center.text-muted Loading leaderboard...
